[package]
name = "tock"
version = "0.1.4"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Digital clock for the terminal"
readme = "README.md"
homepage = "https://github.com/nwtnni/tock"
repository = "https://github.com/nwtnni/tock"
keywords = ["clock", "terminal", "cli"]
categories = ["command-line-utilities"]

[features]
default = ["interactive"]
interactive = []

[dependencies]
chrono = "0.4.22"
libc = "0.2.132"
structopt = "0.2.16"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
