[package]
name = "tock"
version = "0.1.4"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Digital clock for the terminal"
readme = "README.md"
homepage = "https://github.com/nwtnni/tock"
repository = "https://github.com/nwtnni/tock"
keywords = ["clock", "terminal", "cli"]
categories = ["command-line-utilities"]

[features]
default = ["interactive"]
interactive = []

[dependencies]
chrono = "0.4.22"
libc = "0.2.132"
clap = { version = "3.2.17", features = ["derive"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
