[package]
name = "tock"
version = "1.0.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Digital clock for the terminal"
readme = "README.md"
homepage = "https://github.com/nwtnni/tock"
repository = "https://github.com/nwtnni/tock"
keywords = ["clock", "terminal", "cli"]
categories = ["command-line-utilities"]

[features]
default = ["interactive"]
interactive = []

[dependencies]
chrono = { version = "0.4", features = ["clock", "std"], default-features = false }
libc = { version = "0.2" }
clap = { version = "4.4", features = [
  "color",
  "derive",
  "help",
  "std",
  "usage",
], default-features = false }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'
